some more exceptions, streamRequest and execute methods